--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,23 @@
-== README
+Quick wikipedia clone application.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Installed and Utilized the following ruby gems:
+gem 'bootstrap-sass', '~> 3.3', '>= 3.3.7'
+gem 'devise', '~> 4.2'
+gem 'simple_form', '~> 3.3', '>= 3.3.1'
 
-Things you may want to cover:
+Still want to add a little more customization (not a lot)
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Site navbar issues needing resolution:
+ - Missing "navbar-brand" and "New Article" link
+ - Will continue working to resolve
+ - Want to add a search bar?
+ 
+Overall application is fully functional minus navbar issues
+ - User Authentication 
+ - User ID
+ - Categories
+ - Back, Edit, Delete Options
+ - Limited web functionality without user login
+ - Bootstrapped
+ 
+Completed in Rails 4.2.2; Ruby 2.3.1
